--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
       <input type="email" id="email" name="email">
       
       <!-- Add a label for 'fullname'-->
-      <label for="email">Enter your email:</label>
-
+      <label for="fullname">Enter your fullname:</label>
       
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input type="text" name="name" placeholder="Enter Name">
+      <input id= "fullName" type="text" name="name" placeholder="Enter Name">
 
 
       <!-- Add a label for 'email'-->
