--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input id= "fullName" type="text" name="name" placeholder="Enter Name">
+      <input id= "fullName" type="text" name="name" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
       <label for="email">Enter your email:</label>
@@ -26,7 +26,7 @@
       <!-- Include the place holder text "Enter Email" and make this input required -->
 
       <label for="email">Enter your email:</label>
-      <input type="email" id="email" name="email">
+      <input type="email" id="email" name="email" required>
       
       <!-- Add a label for 'phone'-->
 
