--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input type="email" id="email" name="email" required>
+      
       <label for="email">Enter your email:</label>
       <input type="email" id="email" name="email" required>
       
