Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
       <label for="email">Enter your email:</label>
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input type="email" id="email" name="email" required>
-      
-      <label for="email">Enter your email:</label>
-      <input type="email" id="email" name="email" required>
+      <!-- Include the place holder text "Enter Email" and make this input required --> 
+      <input type="email" id="email" name="email" placeholder="Enter Email" required>
       
       <!-- Add a label for 'phone'-->
+      <label for="phone">Enter your email:</label>
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="tel" id="phone" name="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'message'-->
 
