--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <input type="email" id="email" name="email" placeholder="Enter Email" required>
       
       <!-- Add a label for 'phone'-->
-      <label for="phone">Enter your email:</label>
+      <label for="phone">Enter Telephone :</label>
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <input type="tel" id="phone" name="email" placeholder="Enter Email" required>
+      <input type="tel" id="phone" name="phone" placeholder="Enter Email">
 
       <!-- Add a label for 'message'-->
 
