Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
-      <label for="message">Enter Telephone :</label>
+      <label for="message">Enter Message :</label>
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <textarea name="message"></textarea>
+      <textarea name="message">Enter Message</textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
 
