Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <textarea name="message">Enter Message</textarea>
+      <textarea id="message" name="message">Enter Message</textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
+      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add an input with the type set to 'submit' -->
+      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
 
     </form>
   </body>
