--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add an input with the type set to 'submit' -->
-      <input type="submit" name="phone" placeholder="Enter Telephone (optional)">
+      <input type="submit" value="submit">
 
     </form>
   </body>
