--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <textarea id="message" name="message">Enter Message</textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
+      <label for="location">Enter country :</label>
+      <input type="checkbox" name="checkbox" value="Turkey"> Turkey <br>
+      <input type="checkbox" name="checkbox" value="Syria"> Syria <br>
 
       <!-- Add an input with the type set to 'submit' -->
       <input type="submit" value="submit">
