--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
       <label for="location">Enter country :</label>
-      <input type="checkbox" name="checkbox" value="Turkey"> Turkey <br>
-      <input type="checkbox" name="checkbox" value="Syria"> Syria <br>
+      <input type="checkbox" name="checkbox" value="Turkey"> Turkey
+      <input type="checkbox" name="checkbox" value="Syria"> Syria
 
       <!-- Add an input with the type set to 'submit' -->
       <input type="submit" value="submit">
