--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <input id= "fullName" type="text" name="name" placeholder="Enter Name" required>
+      <input id= "fullname" type="text" name="name" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
       <label for="email">Enter your email:</label>
